⛑🍙 Updated with Glitch

--- a/views/todos.pug
+++ b/views/todos.pug
@@ -3,4 +3,7 @@ form(action='todos/search', method='GET')
   button Search
 ul
  each todo in todos
-  li= todo.text 
+  li
+   span= todo.name 
+   span &nbsp
+   a(href='/todos/'+todo.id+'/delete') Delete
