🏬👷 Updated with Glitch

--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -1,6 +1,6 @@
 h1 Add a new book
 
-form(action='/books/add', method='POST')
+form(action='/books/create', method='POST')
   label
     | Title
     input(name='title', type='text', placeholder="Enter the book's name")
