👩🐽 Updated with Glitch

--- a/views/books.pug
+++ b/views/books.pug
@@ -7,5 +7,5 @@ ul
    span &nbsp
    a(href="/books/delete/" + book.id) Delete
    span &nbsp
-   a(href="/books/update/" + book.id) Update
+   a(href="/books/update") Update
    
