--- a/views/books/books.pug
+++ b/views/books/books.pug
@@ -1,11 +1,12 @@
-h1 All books
+extends ../layouts/common.pug
+block content
+  h1 All books
 
-ul 
- each book in books
-  li
-   span= book.title
-   span &nbsp
-   a(href="/books/delete/" + book.id) Delete
-   span &nbsp
-   a(href="/books/update/" + book.id) Update
-   
+  ul 
+   each book in books
+    li
+     span= book.title
+     span &nbsp
+     a(href="/books/delete/" + book.id) Delete
+     span &nbsp
+     a(href="/books/update/" + book.id) Update
