--- a/views/books/update.pug
+++ b/views/books/update.pug
@@ -1,8 +1,10 @@
-h1 Update Title
+extends ../layouts/common.pug
+block content
+  h1 Update Title
 
-form(action='/books/update' method='POST')
- input(type='hidden', name='id', value= id)
- label New Title
- input(type='text', name='newTitle')
- button Update
- 
+  form(action='/books/update' method='POST')
+   input(type='hidden', name='id', value= id)
+   label New Title
+   input(type='text', name='newTitle')
+   button Update
+
