--- a/views/transactions/create.pug
+++ b/views/transactions/create.pug
@@ -1,13 +1,16 @@
-h1 Create Transaction
-form(action='/transactions/create', method='POST')
+extends ../layouts/common.pug
+block content
+
+  h1 Create Transaction
+  form(action='/transactions/create', method='POST')
   label(for='user') Choose User
-  select(id'user', name='userId')
-   each user in users
-    option(value=user.name)= user.name
-  br
-  label(for='book') Choose Book
-  select(id='book', name='bookId')
-   each book in books
-    option(value=book.title)= book.title
-  br
-  button Create 
+    select(id'user', name='userId')
+     each user in users
+      option(value=user.name)= user.name
+    br
+    label(for='book') Choose Book
+    select(id='book', name='bookId')
+     each book in books
+      option(value=book.title)= book.title
+    br
+    button(class="btn btn-primary") Create 
