--- a/views/transactions/transactions.pug
+++ b/views/transactions/transactions.pug
@@ -1,8 +1,12 @@
-h1 Transactions
-ul
- each tran in trans
-  li
-   span= tran.userId + tran.bookId + tran.isCompleted
-   span &nbsp
-   a(href='/transactions/' + tran.id + '/complete') Complete
-  
+extends ../layouts/common.pug
+block content
+  h1 Transactions
+  ul
+   each tran in trans
+    li
+     span= tran.userId + tran.bookId + tran.isCompleted
+     span &nbsp
+     a(href='/transactions/' + tran.id + '/complete') Complete
+  if errors
+    each error in errors
+      .alert.alert-danger= error
