👁🚘 Updated with Glitch

--- a/views/users/users.pug
+++ b/views/users/users.pug
@@ -6,14 +6,21 @@ block content
   
   table.table.mt-2
     tr
+      th Avatar
       th Name
       th Delete
       th Update
+      th Profile
     each user in users
       tr 
+        td
+          img(src= user.avatar width="32")
         td= user.name
         td 
           a(href="/users/delete/"+ user.id) Delete
         td
           a(href="/users/update/"+ user.id) Update
+        td 
+          a(href="/users/profile/"+ user.id) View
+          
           
