--- a/views/books/books.pug
+++ b/views/books/books.pug
@@ -11,6 +11,7 @@ block content
           p.card-text= book.description
           a.btn.btn-primary(href='#') Hide
           
+  .d-flex.justify-content-center
     nav(aria-label='Search result page')
       ul.pagination
         li.page-item
@@ -20,5 +21,3 @@ block content
             a.page-link(href=`?page=${number}`)= number
         li.page-item
           a.page-link(href=`?page=${next}`) Next
-
-
